# plumb

./: CHANGELOG.md  Cargo.toml  README.md
crates/plumb-core/: Cargo.toml
crates/plumb-core/src/: engine.rs  error.rs  lib.rs  report.rs  shell.rs  tests.rs
crates/plumb-syntax/: Cargo.toml
crates/plumb-syntax/src/: ast.rs  lib.rs  parse.rs
src/: main.rs  repl.rs
