[package]
name = "plumb"
version = "0.1.0"
edition = "2024"
publish = false
description = "An inspectable bash-subset shell: every run is a value; pipe stages are captured and auto-bound to variables"
license = "MIT"

[dependencies]
plumb-core = { path = "crates/plumb-core" }
clap = { version = "4", features = ["derive"] }
reedline = "0.49"
serde_json = "1"

[[bin]]
name = "plumb"
path = "src/main.rs"

[workspace]
members = ["crates/plumb-core", "crates/plumb-syntax"]
resolver = "3"
